HHH-13275 Re-introduce usage of net.bytebuddy.experimental=true when testing on JDK > 11